# kelma-desktop

./: .gitignore  CONTRIBUTORS  Cargo.toml  app.js  index.html  package.json  pyproject.toml  styles.css
.github/workflows/: check-linked-issue.yml  ci.yml  release.yml
ftl/core/: card-templates.ftl  deck-config.ftl  decks.ftl  errors.ftl  exporting.ftl  importing.ftl  launcher.ftl  media-check.ftl  preferences.ftl  profiles.ftl  sync.ftl
ftl/qt/: about.ftl  addons.ftl  errors.ftl  profiles.ftl  qt-accel.ftl  qt-misc.ftl
qt/aqt/: __init__.py  _kelma_bundled.py  _kelma_style.py  _kelma_update.py  about.py  main.py  package.py  preferences.py  profiles.py  sync.py
qt/aqt/data/bundled_addons/kelma/: __init__.py  config.json  config.md  features.py  manifest.json  paths.py  progress.py  reconcile.py  scheduling.py
qt/aqt/data/bundled_addons/kelma/kelma/: auth.py  branding.py  capabilities.py  config.py  consts.py  deckbadges.py  deletions.py  diagnostics.py  engine.py  features.py  gui.py  inspect.py  shadowsync.py  state.py  storage.py  storageview.py  updater.py  v2_engine.py  v2_sync.py
qt/aqt/data/bundled_addons/kelma/kelma/kelma_sync_v2/: anki_apply.py  anki_local.py  canonical_sync.py  card_sync.py  checksum_rs.py  client.py  conflict_policy.py  content_sync.py  deck_sync.py  full_diff.py  media_sync.py  note_sync.py  notetype_sync.py  sync_state.py  tombstone_sync.py
qt/aqt/forms/: main.ui  setgroup.ui  setlang.ui
qt/installer/app/: pyproject.toml
qt/installer/app/resources/: anki.icns
qt/launcher/mac/: build.sh  notarize.sh
qt/launcher/win/: anki.exe.manifest  anki.template.nsi
qt/tests/: test_kelma_bundled.py  test_kelma_update.py
qt/tools/: build_installer.py
