[project]
requires-python = ">=3.10"

# This project was generated with 0.3.26 using template: https://github.com/beeware/briefcase-template @ v0.3.26
[tool.briefcase]
project_name = "Kelma"
bundle = "tech.kelma"
url = "https://kelma.tech"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
author = "Kelma"

[tool.briefcase.app.anki]
formal_name = "Kelma"
description = "An intelligent spaced-repetition learning system for language immersion"
long_description = """Kelma is a flashcard program that helps you spend more time on challenging material, and less on what you already know. It syncs with KelmaSync and KelmaMobile.

Kelma is an open-source fork of Anki (© Ankitects Pty Ltd), distributed under the AGPL-3.0."""
sources = [
  "src/anki",
]
icon = "resources/anki"
cleanup_paths = [
  # document_type icons
  "anki-*.ico",
  "**/anki-*.icns",
  # Qt WebEngine debug-symbol resources
  "**/*.debug.pak",
  "**/*.debug.bin",
  # Type-checker stubs / markers
  "**/*.pyi",
  "**/py.typed",
  # PyQt6 binding sources / API completion files
  "**/*.sip",
  "**/PyQt6/bindings/**/*.toml",
  "**/PyQt6/Qt6/qsci",
  # pywin32 dev/help bundles
  "**/PyWin32.chm",
  "**/pythonwin",
  "**/adodbapi",
  "**/isapi",
  "**/win32com/HTML",
  "**/win32com/demos",
  "**/win32com/makegw",
  "**/win32com/include",
  "**/win32com/libs",
  "**/win32com/readme.html",
  # Vendored test suites
  "**/test",
  "**/tests",
  # Packaging metadata
  "**/*.dist-info/INSTALLER",
  "**/*.dist-info/RECORD",
  "**/*.dist-info/WHEEL",
  # Console scripts
  "**/app_packages/bin/*",
]
console_app = false
use_full_install_path = false

permission.microphone = "The microphone will only be used when you tap the record button."
permission.camera = "Add-ons may access your camera."

[tool.briefcase.app.anki.macOS]
universal_build = false
min_os_version = "12.0"
entitlement."com.apple.security.cs.allow-jit" = true
entitlement."com.apple.security.cs.disable-executable-page-protection" = true
entitlement."com.apple.security.cs.allow-dyld-environment-variables" = true
entitlement."com.apple.security.device.audio-input" = true

[tool.briefcase.app.anki.linux.flatpak]
supported = false

[tool.briefcase.app.anki.windows]

[tool.briefcase.app.anki.iOS]
supported = false

[tool.briefcase.app.anki.android]
supported = false

[tool.briefcase.app.anki.web]
supported = false

[tool.briefcase.app.anki.document_type.apkg]
description = "Kelma deck package"
extension = "apkg"
icon = "resources/anki"
mime_type = "application/x-apkg"
url = "https://kelma.tech"
macOS.CFBundleTypeRole = "Editor"

[tool.briefcase.app.anki.document_type.colpkg]
description = "Kelma collection package"
extension = "colpkg"
icon = "resources/anki"
mime_type = "application/x-colpkg"
url = "https://kelma.tech"
macOS.CFBundleTypeRole = "Editor"

[tool.briefcase.app.anki.document_type.ankiaddon]
description = "Kelma add-on package"
extension = "ankiaddon"
icon = "resources/anki"
mime_type = "application/x-ankiaddon"
url = "https://kelma.tech"
macOS.CFBundleTypeRole = "Editor"
